fix view on small screens

--- a/src/app/character-detail/character-detail.component.less
+++ b/src/app/character-detail/character-detail.component.less
@@ -19,6 +19,9 @@
         @media (max-width: 900px) {
             height: 250px;
         }
+        @media (max-width: 480px) {
+            height: 300px;
+        }
     }
     &-details-list {
         font-size: large;
