--- a/src/app/messages/messages.component.less
+++ b/src/app/messages/messages.component.less
@@ -16,5 +16,8 @@
         font-family: monospace;
         border: 3px solid @border-color;
         border-radius: 20px;
+        @media (max-width: 480px) {
+            height: 380px;
+        }
     }
 }
