--- a/src/app/people/people.component.less
+++ b/src/app/people/people.component.less
@@ -25,6 +25,9 @@
             height: 220px;
             margin: 20px auto;
         }
+        @media (max-width: 480px) {
+            height: 260px;
+        }
         &-info {
             font-size: large;
             list-style-type: none;
